# stabilo-optimize

./: .gitignore  .zenodo.json  CITATION.cff  README.md  benchmark.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
experiments/sample_experiment/: comprehensive_benchmark.json  simple_benchmark.json
experiments/sample_experiment/results/simple_benchmark/: 0000001.json  0000002.json  0000003.json  0000004.json  0000005.json  0000006.json  0000007.json  0000008.json  0000009.json  0000010.json  0000011.json  0000012.json  0000013.json  0000014.json  0000015.json  0000016.json  0000017.json  0000018.json  0000019.json  0000020.json  0000021.json  0000022.json  0000023.json  0000024.json  0000025.json  0000026.json  0000027.json  0000028.json  0000029.json  0000030.json  0000031.json  0000032.json  0000033.json  0000034.json  0000035.json  0000036.json  0000037.json  0000038.json  0000039.json  0000040.json  (+22 more)
experiments/sample_experiment/scenes/: 00003.txt  00972.txt  03936.txt  README.md
experiments/sample_experiment/visualizations/simple_benchmark/: README.md  run_0000009.json
stabilo_optimize/: __init__.py  __main__.py  benchmark.py  cli.py
stabilo_optimize/utils/: logging_utils.py  plot.py  visualize.py
tests/: test_benchmark.py  test_logging_utils.py  test_plot.py
utils/: plot.py
